--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" href="favicon.ico/ms-icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
 
-    <title> Nathan's Website Showcase</title>
+    <title>Nathan's Website Showcase</title>
 </head>
 <body style="background-color: #1f1f1f; color: #ffffff; font-family: Arial, sans-serif;">
     <div style="max-width: 960px; margin: 0 auto; padding: 20px;">
